--- a/apps/auth_service/BUILD
+++ b/apps/auth_service/BUILD
@@ -3,6 +3,10 @@ subinclude("//build/defs:gitignore")
 go_binary(
     name = "auth_service",
     srcs = ["main.go"],
+    deps = [
+        "//apps/auth_service/proto",
+        "//common/go/auth",
+    ],
 )
 
 update_gitignore(name = "update_gitignore")
