--- a/apps/user_service/BUILD
+++ b/apps/user_service/BUILD
@@ -5,6 +5,7 @@ go_binary(
     srcs = ["main.go"],
     deps = [
         "//apps/auth_service/proto",
+        "//apps/user_service/proto",
     ],
 )
 
