--- a/apps/auth_service/proto/BUILD
+++ b/apps/auth_service/proto/BUILD
@@ -1,5 +1,5 @@
 grpc_library(
-    name = "auth_service",
+    name = "proto",
     srcs = ["auth_service.proto"],
     visibility = ["//apps/..."],
 )
