--- a/apps/user_service/.gitignore
+++ b/apps/user_service/.gitignore
@@ -1,2 +1,2 @@
-/apps/auth_service/proto/auth_service.pb.go
+# Entries below this point are managed by Please (DO NOT EDIT)
 proto/user_service.pb.go
